@@ -1,3 +1,9 @@
+2001-05-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/mouse.c (MousePosToGraphPosReal): Fix for Sourceforge 
+	bug #426199: check to avoid division by zero in special cases of
+	'set view'.
+
 2001-05-11  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* docs/gnuplot.doc: Inaccuracy regarding yerrorbars fixed --- it's
